# projectome_analysis

./: .gitignore  .gitmodules  BUG_FIX_SUMMARY.md  COMPREHENSIVE_TEST_RESULTS.json  FINAL_COMPREHENSIVE_TEST.py  FNT_TOOLS_README.md  README.md  SUBCORTEX_VISUALIZATION_RESEARCH.md  convert_swc_to_fnt_decimate.py  convert_swc_to_fnt_decimate_adapted.py  deb_fmost.yml  fnt_distance_workflow.py  fnt_tools_adapter.py  generate_tree.py  insula_clustering_results.csv  insula_morphological_features_251637.csv  joined_fnt  setup.py  tree_to_png.py  treex.bat
Kimi_Agent_R绘图方案与脑岛分析/: 02_脑岛投射分析方案.md  03_R代码实现_脑岛分析.md  05_示例数据模板.xlsx  R_热图绘制教程.md  advanced_visualization.R  plot_figure2a.py  演示Notebook.ipynb
R_analysis/: .RData  .Rhistory  00_README_251637分析方案.md  00_README_使用指南.md  00_R入门教程_基于实际数据.html  01_针对251637数据的完整分析.R  02_热图高级技巧.md  04_数据准备与质量控制.md  06_完整R分析脚本.R  07_方案总结与核验.md  Novel_Projectome_Analysis_Tutorial.Rmd  Projectome_Analysis_Tutorial.Rmd  README.md  domain.Rmd  domain_analysis_plot.Rmd  fnt_dist_R_Results_Penalty_k15.xlsx  fnt_dist_R_Results_Penalty_k20.xlsx  fnt_dist_R_Results_Penalty_k30.xlsx  fnt_dist_R_Results_Penalty_k9.xlsx  fnt_dist_clustering.r  merge_bilateral.R  plot_figure2a.R  (+4 more)
neuron-vis/neuronVis/plugins/: CMakeLists.txt
neuron-vis/neuronVis/plugins/SwcLoader/: CMakeLists.txt  SwcLoader.cpp  SwcLoader.h  annot.h  config-fnt.h  graph.cc  graph.h  graph.priv.h  swcloader.cc  utils.h
neuron-vis/neuronVis/plugins/cythonFun/: foo.cpp  foo.html  foo.pyd  foo.pyx  setup.py  test.py
neuron-vis/neuronVis/plugins/demo/: CMakeLists.txt  main.cpp
(+1276 files in other folders)
